--- a/screen/moqui.org/index.html
+++ b/screen/moqui.org/index.html
@@ -144,3 +144,4 @@ Today, it continues to serve the community as a vibrant spiritual campus in the 
 </div>
 </div>
 <!-- MergeFile -->
+<!-- example -->
