add todos from meeting

--- a/screen/moqui.org/events.html
+++ b/screen/moqui.org/events.html
@@ -1,3 +1,4 @@
+    <!-- TODO: color on events tab not changing when caleneder active, or change to prebuilt toggle -->
     <body>
         Google Tag Manager (noscript)
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRMZ36R" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
